# aqua

./: .bumpprc.ts  .gitignore  CLAUDE.md  Cargo.toml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  registry.json
.github/workflows/: release.yml
.trellis/: .template-hashes.json  config.yaml
.trellis/tasks/: ROADMAP.md  task-plan.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-12-alter-generator/: task.json
.trellis/tasks/07-12-builtin-biztype/: prd.md  task.json
.trellis/tasks/07-12-cli-mode/: prd.md  task.json
.trellis/tasks/07-12-connector-h2/: task.json
.trellis/tasks/07-12-dataset-data-rows/: design.md  prd.md  task.json
.trellis/tasks/07-12-dataset-sqlite/: task.json
.trellis/tasks/07-12-datasource-persist/: implement.md  prd.md  task.json
.trellis/tasks/07-12-diff-engine/: task.json
.trellis/tasks/07-12-driver-jdbc/: task.json
.trellis/tasks/07-12-driver-mysql/: implement.md  prd.md  task.json
.trellis/tasks/07-12-driver-postgres/: prd.md  task.json
.trellis/tasks/07-12-driver-trait/: prd.md  task.json
.trellis/tasks/07-12-e2e-test/: prd.md  task.json
.trellis/tasks/07-12-enum-delete-cascade/: prd.md  task.json
.trellis/tasks/07-12-enum-java-gen/: prd.md  task.json
.trellis/tasks/07-12-fe-arch/: prd.md  task.json
.trellis/tasks/07-12-fe-biztype/: prd.md  task.json
.trellis/tasks/07-12-fe-dataset/: prd.md  task.json
.trellis/tasks/07-12-fe-datasource/: prd.md  task.json
.trellis/tasks/07-12-fe-enum/: prd.md  task.json
app/: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts
app/src/: App.vue  main.ts
connector/: dependency-reduced-pom.xml  pom.xml
crates/aqua-core/: Cargo.toml
crates/aqua-core/src/: alter.rs  lib.rs
crates/aqua-core/src/dataset/: mod.rs
crates/aqua-core/src/datasource/: mod.rs
crates/aqua-core/src/diff/: mod.rs  types.rs
crates/aqua-core/src/driver/: dialects.rs  error.rs  factory.rs  jdbc.rs  mod.rs  mysql.rs  postgres.rs  state.rs  trait_def.rs  types.rs
crates/aqua-core/src/generators/: frontend_json.rs  mod.rs  strconst.rs
crates/aqua-core/src/generators/ddl/: index.rs  mod.rs  table.rs  types.rs
crates/aqua-core/src/generators/java/: entity.rs  enum_class.rs  mod.rs  naming.rs  types.rs
crates/aqua-core/src/import/: from_db.rs  mod.rs
crates/aqua-core/src/schema/: auto_gen_strategy.rs  biz_type.rs  data_type.rs  enum_def.rs  field.rs  mod.rs  project.rs  table.rs  validate.rs
crates/aqua-core/tests/: alter.rs  diff.rs  generators_ddl.rs  generators_java.rs  integration_db.rs  schema.rs
crates/aqua-core/tests/fixtures/: invalid-enum-non-varchar.json  invalid-has-code-missing-code.json  invalid-missing-required.json  valid-full.json
docs/: architecture.md  design.md  grill-me-2026-07-11.md  how-to-add-database.md  packaging.md
drivers/: README.md
scripts/: build-connector.mjs  version-sync.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: builtin-biztypes.json
src-tauri/src/: cli.rs  lib.rs  main.rs
src-tauri/src/commands/: builtin.rs  database.rs  dataset.rs  dataset_io.rs  datasource.rs  generate.rs  import.rs  mod.rs  project.rs
(+299 files in other folders)
