[workspace]
resolver = "2"
members = ["crates/aqua-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["aqua"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# aqua-core 内部依赖由各自 Cargo.toml 声明,这里只放共享基础

[profile.release]
panic = "abort"
strip = true
lto = true
codegen-units = 1
opt-level = "s"
