[package]
name = "aqua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
aqua-core = { path = "../crates/aqua-core" }
clap = { version = "4.5", features = ["derive"] }
tauri-plugin-dialog = "2"

[features]
# 默认自定义协议
custom-protocol = ["tauri/custom-protocol"]
