[package]
name = "aqua-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "aqua_core"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait = "0.1"

# native DB drivers (MySQL/PG, 免 Java; 仅这两个库用 Rust 直连)
mysql_async = { version = "0.34", default-features = false, features = ["minimal-rust"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"

# dataset SQLite 载体
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# data source 密码加密 (design.md AES-256-GCM)
aes-gcm = "0.10"
